* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon

Other libraries are planned, such as connection pooling, as well as administrative functions.

==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.4 through iRODS 3.0, and is tested with the current (as of release time) development version of iRODS

==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==

* [#930] [iROD-Chat:8451] Does Jargon limit the number of items returned in a collection contents list?
** Correctly compute last index when listing collections with permissions
** Take out user type query and set to unknown to help performance.  This was causing a subquery for every row.  The user type defaults to UNKNOWN for now, and that information will not be available in the current iteration.  Note that specific/sql query will be used to impove the available information in this query as a separate feature request.
** fix record counts in gen query results to account for paging offset when adding counts to returned rows
** added IRODSThousandCollectionsTest and augmented IRODSThousandFilesTest to test out this operation

* [#936] delete with folder containing files fails silently
** add thrown JargonRuntimeException for unanticipated delete errors. 

*[#993] fix special query parsing to account for blank rows
** bug identified and patched by John Wregglesworth of iPlant

==Features==

 * [#764] Java libraries and code to integrate idrop-web
 ** added updateUserInfo() to UserAO