@@ -57,6 +57,9 @@ Note that the following bug and feature requests are logged in GForge with relat
 *[#993] fix special query parsing to account for blank rows
 ** bug identified and patched by John Wregglesworth of iPlant
 
+*[#1004] irods output stream errors writing to a file not under /zone/home
+** Fix bug that creates an IRODSOutputStream on open twice when resource re-routing is turned on
+
 ==Features==
 
  * [#764] Java libraries and code to integrate idrop-web
